fixed popup gap

--- a/src/components/ProgressBar/ProgressBar.module.scss
+++ b/src/components/ProgressBar/ProgressBar.module.scss
@@ -46,7 +46,7 @@
 }
 
 .fullPopup {
-  gap: 6px;
+  gap: 16px;
   display: flex;
   justify-content: row;
   flex-direction: row;
